--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,9 @@
   twitter: DavideBri # twitter username
   email: davidebrienza@pm.me
 
+# Font Settings
+googlewebfonts: family=Play:wght@400;700&family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,300;1,400;1,500;1,600;1,700;1,900
+
 # URL settings
 url: "webcomtop.github.io" #
 baseurl: # leave blank if not wishd
